// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders a checkbox field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <input
      aria-describedby="idNameDescription"
      checked={false}
      id="id"
      name="idName"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      style={
        Object {
          "borderColor": "#767676",
          "borderRadius": "3px",
          "borderStyle": "solid",
          "borderWidth": "1px",
          "marginBottom": "3px",
          "marginRight": "10px",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="id"
    >
      Checkbox Field
    </label>
    
  </div>
</div>
`;

exports[`Field renders a checkbox field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
      }
    }
  >
    <input
      aria-describedby="idNameDescription"
      checked={false}
      id="id"
      name="idName"
      onBlur={[MockFunction]}
      onChange={[MockFunction]}
      style={
        Object {
          "borderColor": "red",
          "borderRadius": "3px",
          "borderStyle": "solid",
          "borderWidth": "1px",
          "marginBottom": "3px",
          "marginRight": "10px",
        }
      }
      type="checkbox"
    />
    <label
      htmlFor="id"
    >
      Checkbox Field
    </label>
    <p
      style={
        Object {
          "color": "red",
          "margin": 0,
        }
      }
    >
      error
    </p>
    <p
      id="idNameDescription"
      style={
        Object {
          "margin": 0,
        }
      }
    >
      description
    </p>
  </div>
</div>
`;

exports[`Field renders a number field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Number Field
  </label>
  <input
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="number"
    value=""
  />
  
</div>
`;

exports[`Field renders a number field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Number Field
  </label>
  <input
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="number"
    value=""
  />
  <p
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="idNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;

exports[`Field renders a select field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Select Field
  </label>
  <select
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  >
    <option
      disabled={true}
      value="-placeholder-"
    >
      
    </option>
    <option
      value="option1"
    >
      Option 1
    </option>
    <option
      value="option2"
    >
      Option 2
    </option>
  </select>
  
</div>
`;

exports[`Field renders a select field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Select Field
  </label>
  <select
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  >
    <option
      disabled={true}
      value="-placeholder-"
    >
      placeholder
    </option>
    <option
      value="option1"
    >
      Option 1
    </option>
    <option
      value="option2"
    >
      Option 2
    </option>
  </select>
  <p
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="idNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;

exports[`Field renders a text area field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Text Area Field
  </label>
  <textarea
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    rows={6}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  />
  
</div>
`;

exports[`Field renders a text area field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Text Area Field
  </label>
  <textarea
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    rows={12}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    value=""
  />
  <p
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="idNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;

exports[`Field renders a text field correctly 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Text Field
  </label>
  <input
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    style={
      Object {
        "borderColor": "#767676",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="text"
    value=""
  />
  
</div>
`;

exports[`Field renders a text field correctly 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "25px",
    }
  }
>
  <label
    htmlFor="id"
  >
    Text Field
  </label>
  <input
    aria-describedby="idNameDescription"
    id="id"
    name="idName"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    style={
      Object {
        "borderColor": "red",
        "borderRadius": "3px",
        "borderStyle": "solid",
        "borderWidth": "1px",
        "marginBottom": "3px",
      }
    }
    type="text"
    value=""
  />
  <p
    style={
      Object {
        "color": "red",
        "margin": 0,
      }
    }
  >
    error
  </p>
  <p
    id="idNameDescription"
    style={
      Object {
        "margin": 0,
      }
    }
  >
    description
  </p>
</div>
`;
